Fix header z-index

--- a/static/sass/_layout.sass
+++ b/static/sass/_layout.sass
@@ -6,6 +6,7 @@
 
 .header-static
   position: fixed
+  z-index: 2 
   width: 100%
   height: $headerHeight
   .container
